--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,20 @@
-[workspace]
-resolver = "2"
-members = ["fe","ff", "fm", "hints"]
+[package]
+edition = "2024"
+version = "0.0.1"
+name = "frozen-core"
+license = "Apache-2.0"
+exclude = ["shell.nix"]
+description = "Core utilities for frozen codebases"
+repository = "https://github.com/frozen-lab/frozen-core"
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.178"
+
+[dev-dependencies]
+tempfile = "3.20.0"
+
+[features]
+default = []
+
+ff = []
+fm = []
