--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ exclude = ["shell.nix"]
 description = "Core utilities for frozen codebases"
 repository = "https://github.com/frozen-lab/frozen-core"
 
+[features]
+ff = ["libc"]
+fm = ["libc"]
+default = []
+
 [target.'cfg(unix)'.dependencies]
-libc = "0.2.178"
+libc = { version = "0.2.178", optional = true }
 
 [dev-dependencies]
 tempfile = "3.20.0"
 
-[features]
-ff = []
-fm = []
+[target.'cfg(unix)'.dev-dependencies]
+libc = "0.2.178"
