--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,13 @@
 name = "frozen-core"
 edition = "2024"
 version = "0.0.2"
-license = "Apache-2.0"
 exclude = ["shell.nix"]
+license = "MIT OR Apache-2.0"
 keywords = ["frozen lab", "frozen core"]
 repository = "https://github.com/frozen-lab/frozen-core"
 description = "Custom implementations and core utilities for frozen codebases"
 
 [features]
-default = []
 ff = ["libc"]
 fm = ["libc"]
 
