updated gh actions to test on more machines & arch's

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,35 +3,55 @@ name: Tests
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-  unit_tests:
+  linux:
+    name: Linux
     strategy:
       fail-fast: false
       matrix:
-        platform:
+        include:
           - os: ubuntu-latest
+            arch: x86_64
+          - os: ubuntu-22.04
             arch: x86_64
           - os: ubuntu-24.04-arm
             arch: aarch64
-          - os: macos-15-intel
-            arch: x86_64
-          - os: macos-latest
+          - os: ubuntu-22.04-arm
             arch: aarch64
-    runs-on: ${{ matrix.platform.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - name: Toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - uses: Swatinem/rust-cache@v2
         with:
-          key: ${{ matrix.platform.arch }}
-          cache-on-failure: true
-      - name: Tests
-        run: cargo test --release -- --nocapture
+          key: linux-${{ matrix.arch }}
+      - run: cargo test --release -- --nocapture
+
+  macos:
+    name: MacOS
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-15-intel
+            arch: x86_64
+          - os: macos-14
+            arch: aarch64
+          - os: macos-latest
+            arch: aarch64
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: macos-${{ matrix.arch }}
+      - run: cargo test --release -- --nocapture
